--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,6 @@
 dataSource.driver=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://localhost:3306/seiei_mall?useSSL=false&amp;charaterEncoding=utf8&amp;serverTimezone=GMT
+dataSource.url=jdbc:mysql://localhost:3306/seiei_mall??useUnicode=true&characterEncoding=utf8
+# jdbc:mysql://localhost:3306/seiei_mall?useSSL=false&amp;useUnicode=true&amp;characterEncoding=utf8&amp;serverTimezone=GMT
 dataSource.username=root
 dataSource.password=123456
 dataSource.initialSize=20
