--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,8 +23,12 @@
     <!-- spring 主配置，下面的 dispatcher-servlet.xml 是 spring mvc 的配置 -->
     <param-value>classpath:spring/applicationContext.xml</param-value>
   </context-param>
+    <context-param>
+        <param-name/>
+        <param-value/>
+    </context-param>
 
-  <!-- 编码过滤器 -->
+    <!-- 编码过滤器 -->
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
