--- a/src/main/resources/properties/seieiMall.properties
+++ b/src/main/resources/properties/seieiMall.properties
@@ -1,1 +1,5 @@
 password.salt=geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+ftp.server.ip=\u4F60\u7684FTP\u670D\u52A1\u5668ip\u5730\u5740
+ftp.user=mmallftp
+ftp.pass=ftppassword
+ftp.server.http.prefix=http://img.happymmall.com/
