--- a/src/main/resources/properties/seieiMall.properties
+++ b/src/main/resources/properties/seieiMall.properties
@@ -1,6 +1,6 @@
 password.salt=geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
-ftp.server.ip=\u4F60\u7684FTP\u670D\u52A1\u5668ip\u5730\u5740
+ftp.server.ip=192.168.184.1
 ftp.user=seiei
 ftp.password=123456
 ftp.port=21
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://image.seieimall.com/
