添加购物车商品删除接口

--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        <!-- 缓存工具库 -->
+        <!-- Guava 工具库，内含缓存，Lists.newArrayList() -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -142,7 +142,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
-        <!-- 工具库 -->
+        <!-- CollectionUtils 工具库 -->
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
