--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
             <artifactId>jsqlparser</artifactId>
             <version>0.9.4</version>
         </dependency>
-        <!-- alipay -->
+        <!-- start - alipay 支付宝需要的jar包 -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -231,6 +231,7 @@
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
         </dependency>
+        <!-- end - alipay 支付宝需要的jar包 -->
         <!-- 提供键值对形式的内存数据库 -->
         <dependency>
             <groupId>redis.clients</groupId>
@@ -259,7 +260,11 @@
                     <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
                 </configuration>
             </plugin>
-            <!-- maven的核心插件之一 complier插件默认只支持编译Java 1.4，因此需要加上支持高版本jre的配置，在pom.xml里面加上 增加编译插件 -->
+            <!--
+                项目使用了本地jar包（支付宝），要想要在Maven打包项目时把这些本地jar包都一并打包，就需要将本地jar包存放在
+                ${project.basedir}/src/main/webapp/WEB-INF/lib 目录下，
+                并声明以下插件
+             -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
