--- a/src/main/resources/properties/seieiMall.properties
+++ b/src/main/resources/properties/seieiMall.properties
@@ -4,4 +4,4 @@ ftp.user=seiei
 ftp.password=123456
 ftp.port=21
 ftp.server.http.prefix=http://image.seieimall.com/
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://gzqjk7.natappfree.cc/order/alipay_callback.do
